--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/datetimepicker": "^3.4.3",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^12.1.0",
+    "@react-native-firebase/auth": "^12.1.0",
     "@react-native-picker/picker": "^1.14.0",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.9.4",
@@ -26,12 +28,14 @@
     "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^3.6.0",
+    "react-native-paper": "^4.9.1",
     "react-native-pie": "^1.1.2",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
     "react-native-svg": "^12.1.0",
     "react-native-table-component": "^1.2.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
