--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^12.1.0",
     "@react-native-firebase/auth": "^12.1.0",
+    "@react-native-firebase/database": "^12.1.0",
+    "@react-native-firebase/storage": "^12.1.0",
     "@react-native-picker/picker": "^1.14.0",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.9.4",
